feat: Add comprehensive CI/CD workflows for code quality, security, and dependency management
- Introduced .editorconfig for consistent coding styles and naming conventions in C# files.
- Configured Dependabot for automated dependency updates for NuGet packages, Docker images, and GitHub Actions.
- Implemented Code Quality & SAST workflow using CodeQL and Semgrep for static analysis.
- Added Container Security Scanning workflow with Hadolint and Trivy for Dockerfile and image vulnerability checks.
- Created Dependency Scanning workflow to audit NuGet packages for vulnerabilities.
- Developed PR Analytics & Insights workflow to analyze pull request size and commit message formats.
- Established Integration Tests workflow to run black-box tests against a live Docker container.
- Added black-box tests for health checks, version info, file scanning, and async scanning endpoints.

--- a/.github/workflows/build-test-template.yml
+++ b/.github/workflows/build-test-template.yml
@@ -51,3 +51,30 @@ jobs:
         CI: true
       run: |
         dotnet build --no-restore -p:CI=${CI} ${{ inputs.project_path }}
+
+    - name: Run Tests
+      if: ${{ inputs.run_tests }}
+      run: |
+        dotnet test src/Arcus.ClamAV.Tests/Arcus.ClamAV.Tests.csproj \
+          --no-build \
+          --verbosity normal \
+          --logger "trx;LogFileName=test-results.trx" \
+          --collect:"XPlat Code Coverage" \
+          --configuration Release
+
+    - name: Upload Coverage Reports
+      if: ${{ inputs.run_tests }}
+      uses: codecov/codecov-action@v4
+      with:
+        files: ./coverage.cobertura.xml
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}
+
+    - name: Publish Test Results
+      if: always()
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      with:
+        files: '**/test-results.trx'
+        check_name: Unit Test Results
